--- a/Lab1/Звіт.md
+++ b/Lab1/Звіт.md
@@ -91,22 +91,5 @@ print(f"Optimal point:  Y({X1[OPT_Y]}, {X2[OPT_Y]}, {X3[OPT_Y]}) = {Y[OPT_Y]}")
 
 
 ## Результат виконання роботи
-```
-+----+-----+------+-----+-----+--------+--------+--------+
-| N  |  X1 |  X2  |  X3 |  Y  |  XH1   |  XH2   |  XH3   |
-+----+-----+------+-----+-----+--------+--------+--------+
-| 1  |  6  |  1   |  6  |  42 | -0.368 |  -1.0  | -0.333 |
-| 2  |  10 |  4   |  1  |  65 | 0.053  | -0.684 | -0.889 |
-| 3  |  7  |  16  |  18 | 174 | -0.263 | 0.579  |  1.0   |
-| 4  |  9  |  12  |  3  | 122 | -0.053 | 0.158  | -0.667 |
-| 5  |  0  |  12  |  7  | 103 |  -1.0  | 0.158  | -0.222 |
-| 6  |  11 |  15  |  4  | 151 | 0.158  | 0.474  | -0.556 |
-| 7  |  4  |  20  |  2  | 161 | -0.579 |  1.0   | -0.778 |
-| 8  |  19 |  7   |  0  | 111 |  1.0   | -0.368 |  -1.0  |
-| X0 | 9.5 | 10.5 | 9.0 |  —  |   —    |   —    |   —    |
-| dx | 9.5 | 9.5  | 9.0 |  —  |   —    |   —    |   —    |
-+----+-----+------+-----+-----+--------+--------+--------+
-Yет = 125.0
-Average = 116.125
-Optimal point:  Y(19, 7, 0) = 111
-```
+
+![Результат](https://github.com/naz-olegovich/MDN_labs/blob/main/Lab1/result.png)
